@@ -1,3 +1,8 @@
+2001-07-02  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkEntry.c (DestroyEntry): used Tcl_EventuallyFree
+	instead of ckfree for entryPtr to prevent FMRs. [Bug #413904]
+
 2001-06-26  Mo DeJong  <mdejong@redhat.com>
 
 	* unix/Makefile.in:
